--- a/public/index.html
+++ b/public/index.html
@@ -32,14 +32,14 @@
     <input type="password" placeholder="Repeat Password" name="pass-repeat" id="pass-repeat" required>
     <hr>
     <!-- 6. Change the link on the next line to lead to a (nonexistent) page called "/info/terms/" -->
-    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+    <p>By creating an account you agree to our <a href="/info/terms/">Terms & Privacy</a>.</p>
 
     <button type="submit" class="registerbtn">Register</button>
   </div>
   
   <div class="container signin">
     <!-- 7. Change the link on the next line to lead to a (nonexistent) page called "/app/login/" -->
-    <p>Already have an account? <a href="#">Sign in</a>.</p>
+    <p>Already have an account? <a href="/app/login/">Sign in</a>.</p>
   </div>
 </form>
 
